--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 }
 .container{
     width: 600px;
-    height: 580px;
+    height: 600px;
     background-color: #fff;
     border: 1px solid #fff;
     border-radius: 5px;
@@ -34,12 +34,13 @@ body{
     flex-direction: column;
     width: 120px;
     padding: 10px;
-    width: 300px;
+    width: 345px;
     margin-top: 20x;
 
 }
 .btn1{
     margin-bottom: 20px;
+    width: 330px;
     padding: 10px;
     border-radius: 18px;
     display: flex;
@@ -50,6 +51,7 @@ body{
 }
 .btn2{
     margin-bottom: 20px;
+    width: 330px;
     padding: 10px;
     border-radius: 18px;
     display: flex;
@@ -62,4 +64,35 @@ body{
 .btn2 img{
     width: 30px;
 }
-
+.inp{
+    width: 325px;
+    padding: 11px;
+    margin-top: 16px;
+    border-radius: 5px;
+}
+.btn3{
+    text-align: center;
+    border: 1px solid ;
+    margin-top: 28px;
+    width: 330px;
+    padding: 12px;
+    background-color: #000;
+    color: #fff;
+    border-radius: 30px;
+}
+.btn4{
+    text-align: center;
+    border: 1px solid ;
+    margin-top: 22px;
+    width: 330px;
+    padding: 12px;
+    border-radius: 30px;
+}
+.header p{
+    margin-top: 30px;
+    font-weight: 200;
+    margin-right: 18%;
+}
+.header p a{
+    text-decoration: dotted;
+}
