--- a/style.css
+++ b/style.css
@@ -1,34 +1,41 @@
 *{
     padding: 0;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Geomanist;
+     */
+     font-family: 'Fira Sans', sans-serif;
     box-sizing: border-box;
 }
 body{
     width: 100%;
     height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7));
+    background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
 }
 .container{
+    margin: 13% auto;
     width: 600px;
     height: 600px;
     background-color: #fff;
     border: 1px solid #fff;
     border-radius: 5px;
-    margin: auto;
 }
 .header{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.header img{
-    width: 90px;
+.nav img{ 
+    width: 75px;
 }
 .header h2{
-    font-size: 30px;
-    font-weight: bold;
-} 
+    color: #000;
+    font-size: 35px;
+    font-weight: 700;
+    margin-right;
+    font: inherit;
+    font-size: 34px;
+    
+}
 .btn{
     display: flex;
     flex-direction: column;
@@ -47,28 +54,35 @@ body{
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+    background-color: #fff;
+    border: 1px solid #dadce0;
+    font-size: 16px;
 
 }
 .btn2{
-    margin-bottom: 20px;
-    width: 330px;
-    padding: 10px;
-    border-radius: 18px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-top: 10px;
+    font-weight: bold;
 }
+
+
 .btn1 img{
     width: 20px;
+    margin-right: 6px;
 }
 .btn2 img{
-    width: 30px;
+    width: 37px;
+    margin-right: -4px;
+    margin-left: -15px
 }
 .inp{
     width: 325px;
-    padding: 11px;
+    padding: 19px;
+    font-size: 19px;
     margin-top: 16px;
     border-radius: 5px;
+    padding-left: 6px;
+    border: 1px solid #dadce0;
+
 }
 .btn3{
     text-align: center;
@@ -79,25 +93,33 @@ body{
     background-color: #000;
     color: #fff;
     border-radius: 30px;
+    font-size: 19px;
+    font-weight: bold;
 }
 .btn4{
+    border: 1px solid #dadce0;
     text-align: center;
-    border: 1px solid ;
     margin-top: 22px;
     width: 330px;
     padding: 12px;
     border-radius: 30px;
+    font-weight: bold;
+    font-size: 18px;
 }
 .header p{
-    margin-top: 30px;
+    margin-top: 40px;
     font-weight: 200;
     margin-right: 18%;
+    
 }
 .header p a{
     text-decoration: dotted;
+    color: rgb(29, 155, 240);
 }
 hr{
-    width: 85%;
+    width: 53%;
+    border: 1px solid #dadce0;
+
 }
 span{
     margin-top: -18px;
