--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body{
 .container{
     margin: 13% auto;
     width: 600px;
-    height: 600px;
     background-color: #fff;
     border: 1px solid #fff;
     border-radius: 5px;
@@ -61,7 +60,6 @@ body{
 }
 .btn2{
     margin-top: 10px;
-    font-weight: bold;
 }
 
 
@@ -103,13 +101,15 @@ body{
     width: 330px;
     padding: 12px;
     border-radius: 30px;
-    font-weight: bold;
     font-size: 18px;
 }
 .header p{
     margin-top: 40px;
-    font-weight: 200;
+    color: rgb(83, 100, 113);
+    font-weight: 400;
+    font-size: 15px;
     margin-right: 18%;
+    margin-bottom: 30px;
     
 }
 .header p a{
